fixes layout issues on firefox

--- a/src/sass/_overlay.scss
+++ b/src/sass/_overlay.scss
@@ -27,7 +27,6 @@
     grid-template-columns: 100%;
     width: 80%;
     min-height: fit-content;
-    max-height: 90%;
     align-items: center;
   }
 
@@ -41,6 +40,7 @@
     justify-self: end;
     outline: none;
     border: none;
+    z-index: 2;
 
     &:hover {
       cursor: pointer;
@@ -95,6 +95,7 @@
   &__slide {
     position: absolute;
     height: 100%;
+    width: 100%;
     transition: transform 1s ease;
   }
 
